<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/casa"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_negocios"
            android:icon="@drawable/tienda"
            android:title="@string/menu_negocios" />
        <item
            android:id="@+id/nav_citas"
            android:icon="@drawable/calendario"
            android:title="@string/menu_citas" />
        <item
            android:id="@+id/nav_notificaciones"
            android:icon="@drawable/notificacion"
            android:title="@string/menu_notificaciones" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/logout"
            android:title="@string/menu_salir" />

    </group>
</menu>