<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.negocios.NegociosFragment">

        <ToggleButton
            android:id="@+id/toggleButton7"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#FFFFFF"
            android:checked="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:text="ToggleButton"
            android:textOff="Categoría "
            android:textOn="Categoría Seleccionada"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toEndOf="@+id/toggleButton6"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton5"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/toggleButton6"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FFFFFF"
            android:checked="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:text="ToggleButton"
            android:textOff="Categoría "
            android:textOn="Categoría Seleccionada"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

        <ToggleButton
            android:id="@+id/toggleButton9"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFFFFF"
            android:checked="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:text="ToggleButton"
            android:textOff="Categoría "
            android:textOn="Categoría Seleccionada"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toEndOf="@+id/toggleButton8"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton6"
            app:layout_constraintVertical_bias="0.0" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#FFFFFF"
            android:checked="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:text="ToggleButton"
            android:textOff="Categoría "
            android:textOn="Categoría Seleccionada"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categorias" />

        <ToggleButton
            android:id="@+id/toggleButton8"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FFFFFF"
            android:checked="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:text="ToggleButton"
            android:textOff="Categoría "
            android:textOn="Categoría Seleccionada"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton6"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/categorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/categorias"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menos1km" />

        <ToggleButton
            android:id="@+id/toggleButton5"
            android:layout_width="160dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#FFFFFF"
            android:checked="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:text="ToggleButton"
            android:textOff="Categoría "
            android:textOn="Categoría Seleccionada"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toEndOf="@+id/toggleButton"
            app:layout_constraintTop_toBottomOf="@+id/categorias" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="409dp"
            android:layout_height="51dp"
            android:background="@drawable/home_bg"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></LinearLayout>

        <ImageView
            android:id="@+id/lupa_negra"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/lupa_icon"
            android:src="@drawable/lupa_negra"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/cuando_seralacita" />

        <TextView
            android:id="@+id/cuando_seralacita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/que_estas_buscando"
            android:fontFamily="@font/roboto"
            android:text="@string/que_estas_buscando"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <EditText
            android:id="@+id/dondeEstaslabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/donde_estas"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/usar_mi_direcci_n_actual"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dondeEstaslabel" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cuando_seralacita" />

        <Button
            android:id="@+id/button_buscar_negocios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/boton_buscar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton8"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/cincuentaomaskm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/cincuentaOmas"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.879"
            app:layout_constraintStart_toEndOf="@+id/menos1km"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <TextView
            android:id="@+id/menos1km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/menos_1k"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>